--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
   This is my official site! I can be professional.
+  <!-- TODO: add contact info, link to fun website, link to portfolio -->
+  <!-- TODO: style and image -->
 </body>
 </html>
