--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,3 +1,32 @@
+body {
+  text-align: center;
+}
+
 .portfolio {
   display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.project {
+  margin: 20px;
+  padding: 20px;
+  background-color: #ccc
+}
+
+.project-links {
+  display: flex;
+  justify-content: space-around;
+}
+
+/*
+  restrict img to uniform size automatically,
+  while showing the center portion of the screenshot. adapted from:
+  https://stackoverflow.com/questions/15866223/how-to-make-images-get-cut-off
+*/
+.img-container {
+  height: 200px;
+  width: 300px;
+  color: gray;
+  background-position: center;
 }
