feat: add template inheritance

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='styles/style.css') }}">
-    <title>martin breuss</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
   This is my official site! I can be professional.
   <!-- TODO: add contact info, link to fun website, link to portfolio -->
   <!-- TODO: style and image -->
-</body>
-</html>
+{% endblock %}
