feat: add line-logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-  This is my official site! I can be professional.
+  <div class="logo">
+    |\/|
+  </div>
+  <p>This is my official site! I can be professional.</p>
   <!-- TODO: add contact info, link to fun website, link to portfolio -->
   <!-- TODO: style and image -->
 {% endblock %}
