feat: add favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='styles/style.css') }}">
+    <link rel="shortcut icon" type="image/x-icon" href= "{{ url_for('static', filename='favicon.ico') }}">
     <title>mb/{{title}}</title>
 </head>
 <body>
