--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -8,6 +8,10 @@ body {
   font-size: 30em;
 }
 
+.highlight {
+  color: orange;
+}
+
 .portfolio {
   display: flex;
   justify-content: space-around;
