--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
   <div class="logo">
-    |\/|
+    <!-- TODO: color elements of M on hover, link to different website parts -->
+    |\<span class="highlight">/</span>|
   </div>
   <p>This is my official site! I can be professional.</p>
   <!-- TODO: add contact info, link to fun website, link to portfolio -->
