style: highlight on hover

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,14 @@
 {% block content %}
   <div class="logo">
     <!-- TODO: color elements of M on hover, link to different website parts -->
-    |\<span class="highlight">/</span>|
+    <span class="highlight-green">|</span><span class="highlight-orange">\/</span><span class="highlight-blue">|</span>
   </div>
   <p>This is my official site! I can be professional.</p>
+  <div class="button-row">
+    <button class="highlight-green">contact me</button>
+    <button class="highlight-orange">portfolio</button>
+    <button class="highlight-blue">plunge on in</button>
+  </div>
   <!-- TODO: add contact info, link to fun website, link to portfolio -->
   <!-- TODO: style and image -->
 {% endblock %}
