--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -8,8 +8,29 @@ body {
   font-size: 30em;
 }
 
-.highlight {
+.highlight-orange:hover {
   color: orange;
+  border-color: orange;
+}
+
+.highlight-green:hover {
+  color: lightgreen;
+  border-color: lightgreen;
+}
+
+.highlight-blue:hover {
+  color: lightblue;
+  border-color: lightblue;
+}
+
+.button-row button {
+  font-size: 1.1em;
+  margin: 20px;
+  padding: 10px;
+  border: 2px solid #303030;
+  border-radius: 15px;
+  color: #303030;
+  background-color: #fdfdfd;
 }
 
 .portfolio {
