docs: update TODO

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
   <div class="logo">
-    <!-- TODO: color elements of M on hover, link to different website parts -->
+    <!-- TODO: link M elements to different website parts -->
     <span class="highlight-green">|</span><span class="highlight-orange">\/</span><span class="highlight-blue">|</span>
   </div>
   <p>This is my official site! I can be professional.</p>
@@ -11,5 +11,4 @@
     <button class="highlight-blue">plunge on in</button>
   </div>
   <!-- TODO: add contact info, link to fun website, link to portfolio -->
-  <!-- TODO: style and image -->
 {% endblock %}
