--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -34,4 +34,15 @@
     </div>
     {% endfor %}
   </div>
+  <div class="button-row">
+    <button class="highlight-green">
+      <a href="mailto:breuss.martin@gmail.com">contact me</a>
+    </button>
+    <button class="highlight-orange">
+      <a href="{{ url_for('home') }}">return home</a>
+    </button>
+    <button class="highlight-blue">
+      <a href="http://www.xyayz.com">look for fun</a>
+    </button>
+  </div>
 {% endblock %}
