--- a/templates/base.html
+++ b/templates/base.html
@@ -12,11 +12,11 @@
     <div class="contact-links">
       <!-- thanks to http://www.entypo.com/ -->
       <a href="https://github.com/martin-martin/"><img class="icon" src="static/icons/github.svg"></a>
-      <a href=""><img class="icon" src="static/icons/linkedin.svg"></a>
-      <a href=""><img class="icon" src="static/icons/google+.svg"></a>
+      <a href="https://www.linkedin.com/in/martinbreuss/"><img class="icon" src="static/icons/linkedin.svg"></a>
+      <a href="https://plus.google.com/u/0/+MartinBreuss-martin-martin"><img class="icon" src="static/icons/google+.svg"></a>
       <a href="https://stackoverflow.com/users/5717580/martin-martin"><img class="icon" src="static/icons/stackoverflow.svg"></a>
-      <a href=""><img class="icon" src="static/icons/medium.svg"></a>
-      <a href=""><img class="icon" src="static/icons/twitter.svg"></a>
+      <a href="https://medium.com/@martin.breuss"><img class="icon" src="static/icons/medium.svg"></a>
+      <a href="https://mobile.twitter.com/martinbreuss"><img class="icon" src="static/icons/twitter.svg"></a>
     </div>
     <p class="watersign">martinmade 2017</p>
   </footer>
