feat: open links in new tab

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
       <a href="{{ url_for('portfolio') }}">portfolio</a>
     </button>
     <button class="highlight-blue">
-      <a href="http://www.xyayz.com">plunge on in</a>
+      <a href="http://www.xyayz.com" target="_blank">plunge on in</a>
     </button>
   </div>
   <!-- TODO: add contact info, link to fun website, link to portfolio -->
