--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -42,7 +42,7 @@
       <a href="{{ url_for('home') }}">return home</a>
     </button>
     <button class="highlight-blue">
-      <a href="http://www.xyayz.com">look for fun</a>
+      <a href="http://www.xyayz.com" target="_blank">look for fun</a>
     </button>
   </div>
 {% endblock %}
