--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>{{title}}</h1>
-  <h2>Check out these cool projects!</h2>
+  <p>Check out these cool projects!</p>
   <div class="portfolio">
     <!-- render each project including name, screenshot, description,
         and available links (live project, code, and related blog post) -->
     {% for project in projects %}
     <div class="project">
-      <h3>{{project.name}}</h3>
+      <h2>{{project.name}}</h2>
       <!-- depending on availability, display either image as link,
           only image, or an explanatory string that the img is missing -->
       {% if project.live_link and project.image %}
@@ -22,10 +22,10 @@
       <p>{{project.description}}</p>
       <div class="project-links">
         {% if project.live_link %}
-          <a href={{project.live_link}} target="_blank">see it live</a>
+          <a href={{project.live_link}} target="_blank">live version</a>
         {% endif %}
         {% if project.code_link %}
-          <a href={{project.code_link}} target="_blank">see the code</a>
+          <a href={{project.code_link}} target="_blank">code</a>
         {% endif %}
         {% if project.info_link %}
           <a href={{project.info_link}} target="_blank">read more</a>
