feat: add project technologies

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -61,6 +61,11 @@ button a {
   background-color: #303030;
 }
 
+.technologies {
+  font-size: 0.9em;
+  color: inherit;
+}
+
 .project-links {
   display: flex;
   justify-content: space-around;
