--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -8,6 +8,7 @@
     {% for project in projects %}
     <div class="project">
       <h2>{{project.name}}</h2>
+      <p class="technologies">{{project.technologies}}</p>
       <!-- depending on availability, display either image as link,
           only image, or an explanatory string that the img is missing -->
       {% if project.live_link and project.image %}
