feat: add projects

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -29,7 +29,7 @@
           <a href={{project.code_link}} target="_blank">code</a>
         {% endif %}
         {% if project.info_link %}
-          <a href={{project.info_link}} target="_blank">read more</a>
+          <a href={{project.info_link}} target="_blank">more info</a>
         {% endif %}
       </div>
     </div>
