fix: change heading

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>{{title}}</h1>
-  <p>Check out these cool projects!</p>
+  <p>I like to make things</p>
   <div class="portfolio">
     <!-- render each project including name, screenshot, description,
         and available links (live project, code, and related blog post) -->
