--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='styles/style.css') }}">
     <link rel="shortcut icon" type="image/x-icon" href= "{{ url_for('static', filename='favicon.ico') }}">
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <title>mb/{{title}}</title>
 </head>
 <body>
@@ -20,5 +21,6 @@
     </div>
     <p class="watersign">martinmade 2017</p>
   </footer>
+  <div class="overflow">pst... this is a secret. :)</div>
 </body>
 </html>
