feat: improve mobile accessiblity

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,10 @@
                 2. portfolio moves the M arrow downwards
                 3. xyayz jumps up and dives down -->
   </div>
-  <p>I like building pages on the web, do data analyses and create visualizations, as well as all things A.I.</p>
-  <p>If you want to tell me something, or think that I should work for you, just send me an email. :)</p>
+  <div class="intro-text">
+    <p>I like building pages on the web, do data analyses and create visualizations, as well as all things A.I.</p>
+    <p>If you want to tell me something, or think that I should work for you, just send me an email. :)</p>
+  </div>
   <div class="button-row-main">
     <button class="nav-button highlight-green">
       <a href="mailto:breuss.martin@gmail.com">contact me</a>
@@ -24,4 +26,16 @@
       <a href="http://www.xyayz.com" target="_blank">more stuff</a>
     </button>
   </div>
+  <div class="button-row-mobile">
+    <button class="nav-mobile highlight-green">
+      <a href="mailto:breuss.martin@gmail.com"><img class="icon" src="static/icons/mail.svg">email</a>
+    </button>
+    <button class="nav-mobile highlight-orange">
+      <a href="{{ url_for('portfolio') }}"><img class="icon" src="static/icons/portfolio.svg">portfolio</a>
+    </button>
+    <button class="nav-mobile highlight-blue">
+      <a href="http://www.xyayz.com" target="_blank"><img class="icon" src="static/icons/science.svg">more</a>
+    </button>
+  </div>
+  <hr class="separator">
 {% endblock %}
