--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -46,4 +46,15 @@
       <a href="http://www.xyayz.com" target="_blank">otherthings</a>
     </button>
   </div>
+  <div class="button-row-portfolio-mobile">
+    <button class="nav-mobile highlight-green">
+      <a href="mailto:breuss.martin@gmail.com"><img class="icon" src="static/icons/mail.svg"></a>
+    </button>
+    <button class="nav-mobile highlight-orange">
+      <a href="{{ url_for('home') }}"><img class="icon" src="static/icons/home.svg"></a>
+    </button>
+    <button class="nav-mobile highlight-orange">
+      <a href="{{ url_for('portfolio') }}"><img class="icon" src="static/icons/top.svg"></a>
+    </button>
+  </div>
 {% endblock %}
