refactor: use # to link to top of page

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -54,7 +54,7 @@
       <a href="{{ url_for('home') }}"><img class="icon" src="static/icons/home.svg"></a>
     </button>
     <button class="nav-mobile highlight-orange">
-      <a href="{{ url_for('portfolio') }}"><img class="icon" src="static/icons/top.svg"></a>
+      <a href="#"><img class="icon" src="static/icons/top.svg"></a>
     </button>
   </div>
 {% endblock %}
