doc: add comments

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
     <p>I like building pages on the web, do data analyses and create visualizations, as well as all things A.I.</p>
     <p>If you want to tell me something, or think that I should work for you, just send me an email. :)</p>
   </div>
+  <!-- displayed on larger devices (browsers) -->
   <div class="button-row-main">
     <button class="nav-button highlight-green">
       <a href="mailto:breuss.martin@gmail.com">contact me</a>
@@ -26,6 +27,7 @@
       <a href="http://www.xyayz.com" target="_blank">more stuff</a>
     </button>
   </div>
+  <!-- displayed on smaller devices (mobile) -->
   <div class="button-row-mobile">
     <button class="nav-mobile highlight-green">
       <a href="mailto:breuss.martin@gmail.com"><img class="icon" src="static/icons/mail.svg">email</a>
