--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -35,6 +35,7 @@
     </div>
     {% endfor %}
   </div>
+  <!-- displayed on larger devices (browsers) -->
   <div class="button-row-portfolio">
     <button class="nav-button highlight-green">
       <a href="mailto:breuss.martin@gmail.com">contact me</a>
@@ -46,6 +47,7 @@
       <a href="http://www.xyayz.com" target="_blank">otherthings</a>
     </button>
   </div>
+  <!-- displayed on smaller devices (mobile) -->
   <div class="button-row-portfolio-mobile">
     <button class="nav-mobile highlight-green">
       <a href="mailto:breuss.martin@gmail.com"><img class="icon" src="static/icons/mail.svg"></a>
