--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
       <a href="https://profiles.udacity.com/p/4269199126" target="_blank"><img class="icon" src="static/icons/udacity.svg"></a>
       <a href="https://stackoverflow.com/users/5717580/martin-martin" target="_blank"><img class="icon" src="static/icons/stackoverflow.svg"></a>
       <!-- posts on Udacity discussion forums, in case they will ever become public -->
-      <!-- <a href="https://discussions.udacity.com/u/martin-martin/activity" target="_blank"><img class="icon" src="static/icons/tree.svg"></a> -->
+      <!-- <a href="https://discussions.udacity.com/u/martin-martin/activity" target="_blank"><img class="icon" src="static/icons/chat.svg"></a> -->
       <a href="https://medium.com/@martin.breuss" target="_blank"><img class="icon" src="static/icons/medium.svg"></a>
       <a href="https://mobile.twitter.com/martinbreuss" target="_blank"><img class="icon" src="static/icons/twitter.svg"></a>
     </div>
