feat: change link to top of page

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -44,7 +44,7 @@
       <a href="{{ url_for('home') }}">return home</a>
     </button>
     <button class="nav-button highlight-blue">
-      <a href="http://www.xyayz.com" target="_blank">otherthings</a>
+      <a href="#">back to top</a>
     </button>
   </div>
   <!-- displayed on smaller devices (mobile) -->
